# attestation2

./: .gitignore  README.md  pyproject.toml  pytest.ini.py  requirements.txt
config/: settings.py  urls.py
online_platform/: admin.py  apps.py  models.py  permissions.py  serializers.py  views.py
online_platform/migrations/: 0001_initial.py
online_platform/tests/: test_api.py
